k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-3tier-app-service
  labels:
    app: azure-3tier-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: azure-3tier-app
